Ensure all tags are nowrap.
Closes #12.

--- a/public/css/cast.css
+++ b/public/css/cast.css
@@ -43,6 +43,10 @@ body {
     transform-origin: 0 100%;
 }
 
+.tag {
+    white-space: nowrap;
+}
+
 #shade {
     position: relative;
     background: rgba(0, 0, 0, 0.5);
