--- a/public/css/matches.css
+++ b/public/css/matches.css
@@ -54,6 +54,7 @@
 }
 
 #matches #completed .match .tag1 {
+    white-space: nowrap;
     grid-column: 1;
     grid-row: 1;
     font-size: 24px;
@@ -82,6 +83,7 @@
 }
 
 #matches #completed .match .tag2 {
+    white-space: nowrap;
     grid-column: 1;
     grid-row: 4;
     font-size: 24px;
@@ -185,6 +187,7 @@
 }
 
 #matches #pending .match .tag1 {
+    white-space: nowrap;
     grid-column: 1;
     grid-row: 1;
     font-size: 24px;
@@ -207,6 +210,7 @@
 }
 
 #matches #pending .match .tag2 {
+    white-space: nowrap;
     grid-column: 1;
     grid-row: 3;
     font-size: 24px;
